Se hacen cambios al poroyecto de SEO y desafio del curso

--- a/404.html
+++ b/404.html
@@ -10,7 +10,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Listado Inmuebles</title>
+
+    <style>
+  .carousel-inner img {
+height: 100%;
+    width: 100%;
+    padding: 2vw;
+  }
+  </style>
+    <title>Error 404</title>
 </head>
 <body>
     <header>
@@ -46,41 +54,16 @@
         </nav>
     </header>
     <main>
-    <div class="container-fluid">        
+    <section>
         <div class="row">
-            <div class="col-sm-12"><h3 class="efectotitulo"> Inmueble Casa del Lago</h3></div>
-            <div class="col-sm-7">       
-                <article>   
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta eligendi reiciendis reprehenderit maxime explicabo quaerat ipsa, quisquam provident error minima vero, ab perferendis iure quas maiores, quae recusandae aut nobis!
-                    <br><a href="detalleinmueble.html">más información...</a>
-                    </p>
-                </article>
-            </div>
-            <div class="col-sm-5"><img class="efectomover" src=" imag/casa1.jpg" width="80%" height="80%"></div>
+            <div class="col-sm-12 text-center"><h1 class="animate__animated animate__rubberBand">Pagina no encontrada</h1></div>
         </div>
         <div class="row">
-            <div class="col-sm-12"><h3 class="efectotitulo"> Inmueble Casa del Chapinero Alto</h3></div>
-            <div class="col-sm-7">       
-                <article>   
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta eligendi reiciendis reprehenderit maxime explicabo quaerat ipsa, quisquam provident error minima vero, ab perferendis iure quas maiores, quae recusandae aut nobis!
-                    <br><a href="detalleinmueble.html">más información...</a>
-                    </p>
-                </article>
+            <div class="col-sm-8 offset-sm-2">
+               <img src="imag/error-404.jpg" alt="PAgina no encontrada">
             </div>
-            <div class="col-sm-5"><img class="efectomover" src=" imag/casa2.jpg" width="80%" height="80%"></div>
         </div>
-        <div class="row">
-            <div class="col-sm-12"><h3 class="efectotitulo"> Inmueble Chaleth Cajica</h3></div>
-            <div class="col-sm-7">       
-                <article>   
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta eligendi reiciendis reprehenderit maxime explicabo quaerat ipsa, quisquam provident error minima vero, ab perferendis iure quas maiores, quae recusandae aut nobis!
-                    <br><a href="detalleinmueble.html">más información...</a>
-                    </p>
-                </article>
-            </div>
-            <div class="col-sm-5"><img class="efectomover" src=" imag/casa3.jpg" width="80%" height="80%"></div>
-        </div>
-    </div>
+    </section>
     </main>
     <footer class="bg-light text-center text-lg-start">
         <div class="container-fluid p-2"  style="background-color: rgba(0, 0, 0, 0.2);">
@@ -98,7 +81,8 @@
             </div>
         </div>
     </footer>
-<script src="js/jquery-3.4.1.js"></script>
-<script src="js/bootstrap.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
