--- a/clientesgrandes.html
+++ b/clientesgrandes.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Encuentra Todo lo relacionado con finca raiz, arriendo, vendo, permuto, comparto, chalets, casaquintas">
+    <meta name="keywords"  content="FINCA RAIZ, ARRIENDO, COMPRO, VENDO, ALQUILO, PERMUTO, CEDO, ARRIENDO COMPARTIDO, FANTASTICA UBICACION">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Proyecto Inmobiliaria</title>
+    <title>Grandes Clientes</title>
 </head>
 <body>
     <header>
