Cambios para entrega final del proyecto

--- a/404.html
+++ b/404.html
@@ -10,14 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-    <style>
-  .carousel-inner img {
-height: 100%;
-    width: 100%;
-    padding: 2vw;
-  }
-  </style>
+    <link rel="shortcut icon" type="image/x-icon" href="imag/favicon.ico">
     <title>Error 404</title>
 </head>
 <body>
