--- a/ayuda.html
+++ b/ayuda.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="imag/favicon.ico">
     <title>Ayuda</title>
 </head>
 <body>
@@ -45,27 +46,33 @@
             </div>
         </nav>
     </header>
-    <main><section>
-        <h3>Preguntas Frecuentes:</h3>
-        <article style="width:100%; display:inline-box;" >
-        <h3>
-            Cual es tu duda esperamos poderte atender:
-        </h3>
-        <p>
-        <ol>
-            <li><a href="#">Pregunta 1</a></li>
-            <li><a href="#">Pregunta 2</a></li>
-            <li><a href="#">Pregunta 3</a></li>
-            <li><a href="#">Pregunta 4</a></li>
-            <li><a href="#">Pregunta 5</a></li>
-        </ol>
-        </p>
-        <img src="imag/ayuda.jpg"></article>
-    </section>
-    <div style="position:relative; text-align: right;">
-        Chatea con nosotros <img src="imag/whatsapp.png" alt="" width="64px" height="64px">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>Preguntas Frecuentes:</h3>
+                <article style="width:100%; display:inline-box;">
+                    <h3>
+                        Cual es tu duda esperamos poderte atender:
+                    </h3>
+                    <p>
+                        <ol>
+                            <li><a href="#">Como ingresar tu inmueble con nosotros</a></li>
+                            <li><a href="#">Como Arrendar un inmueble y que requisitos necesita</a></li>
+                            <li><a href="#">Como llevar un control de tu inmueble con nuestros servicios</a></li>
+                            <li><a href="#">Como acceder a una PQR</a></li>
+                            <li><a href="#">Quieres trabajar con nosotros</a></li>
+                        </ol>
+                    </p>
+                </article>
+            </div>
+            <div class="col-sm-6"><img src="imag/ayuda.jpg"></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 text-right">
+                Chatea con nosotros <img src="imag/whatsapp.png" alt="" width="64px" height="64px">        
+            </div>
+        </div>
     </div>
-    </main>
     <footer class="bg-light text-center text-lg-start">
         <div class="container-fluid p-2"  style="background-color: rgba(0, 0, 0, 0.2);">
             <div class="row">
