--- a/clientesgrandes.html
+++ b/clientesgrandes.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="imag/favicon.ico">
     <title>Grandes Clientes</title>
 </head>
 <body>
@@ -47,23 +48,22 @@
     </header>
     <main>
         <h3>Clientes Grandes</h3>
-        <section class="listarClientesG">
-            <div class="clientes"><img src="http://placeimg.com/150/150/people" alt=""> <h5>Cliente 1</h5></div>
-            <div class="clientes"><img src="http://placeimg.com/150/150/nature" alt=""> <h5>Cliente 2</h5></div>
-            <div class="clientes"><img src="http://placeimg.com/150/150/arch" alt=""> <h5>Cliente 3</h5></div>
-            <div class="clientes"><img src="http://placekitten.com/150/150" alt=""> <h5>Cliente 4</h5></div>
-            <div class="clientes"><img src="http://placeimg.com/150/150/tech" alt=""> <h5>Cliente 5</h5></div>
-            <div class="clientes"><img src="https://picsum.photos/150/150" alt=""> <h5>Cliente 6</h5></div>
-            <div class="clientes"><img src="http://placeimg.com/150/150/grayscale" alt=""> <h5>Cliente 7</h5></div>
-            <div class="clientes"><img src="https://picsum.photos/150/150" alt=""> <h5>Cliente 8</h5></div>
-            <div class="clientes"><img src="http://placeimg.com/150/150/sepia" alt=""> <h5>Cliente 9</h5></div>
-            <div class="clientes"><img src="http://placekitten.com/g/150/150" alt=""> <h5>Cliente 10</h5></div>
-            <div class="clientes"><img src="http://placeimg.com/150/150/grayscale" alt=""> <h5>Cliente 11</h5></div>
-            <div class="clientes"><img src="https://picsum.photos/150/150?grayscale&blur=2" alt=""> <h5>Cliente 12</h5></div>
-            <div class="clientes"><img src="http://placeimg.com/150/150/sepia" alt=""> <h5>Cliente 13</h5></div>
-            <div class="clientes"><img src="http://placekitten.com/150/150" alt=""> <h5>Cliente 14</h5></div>
-            
-        </section>
+        <div class="row">
+            <div class="col-sm-4"><img src="http://placeimg.com/150/150/people" alt=""> <h5>Cliente 1</h5></div>
+            <div class="col-sm-4"><img src="http://placeimg.com/150/150/nature" alt=""> <h5>Cliente 2</h5></div>
+            <div class="col-sm-4"><img src="http://placeimg.com/150/150/arch" alt=""> <h5>Cliente 3</h5></div>
+            <div class="col-sm-4"><img src="http://placekitten.com/150/150" alt=""> <h5>Cliente 4</h5></div>
+            <div class="col-sm-4"><img src="http://placeimg.com/150/150/tech" alt=""> <h5>Cliente 5</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/150/150" alt=""> <h5>Cliente 6</h5></div>
+            <div class="col-sm-4"><img src="http://placeimg.com/150/150/grayscale" alt=""> <h5>Cliente 7</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/150/150" alt=""> <h5>Cliente 8</h5></div>
+            <div class="col-sm-4"><img src="http://placeimg.com/150/150/sepia" alt=""> <h5>Cliente 9</h5></div>
+            <div class="col-sm-4"><img src="http://placekitten.com/g/150/150" alt=""> <h5>Cliente 10</h5></div>
+            <div class="col-sm-4"><img src="http://placeimg.com/150/150/grayscale" alt=""> <h5>Cliente 11</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/150/150?grayscale&blur=2" alt=""> <h5>Cliente 12</h5></div>
+            <div class="col-sm-4"><img src="http://placeimg.com/150/150/sepia" alt=""> <h5>Cliente 13</h5></div>
+            <div class="col-sm-4"><img src="http://placekitten.com/150/150" alt=""> <h5>Cliente 14</h5></div>            
+        </div>
     </main>
     <footer class="bg-light text-center text-lg-start">
         <div class="container-fluid p-2"  style="background-color: rgba(0, 0, 0, 0.2);">
