--- a/contactenos.html
+++ b/contactenos.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Encuentra Todo lo relacionado con finca raiz, arriendo, vendo, permuto, comparto, chalets, casaquintas">
-    <meta name="keywords"  content="FINCA RAIZ, ARRIENDO, COMPRO, VENDO, ALQUILO, PERMUTO, CEDO, ARRIENDO COMPARTIDO, FANTASTICA UBICACION">
+    <meta name="description"
+        content="Encuentra Todo lo relacionado con finca raiz, arriendo, vendo, permuto, comparto, chalets, casaquintas">
+    <meta name="keywords"
+        content="FINCA RAIZ, ARRIENDO, COMPRO, VENDO, ALQUILO, PERMUTO, CEDO, ARRIENDO COMPARTIDO, FANTASTICA UBICACION">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="imag/favicon.ico">
     <title>Contactanos</title>
 </head>
 <body>
@@ -17,57 +20,66 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <img src="imag/ico_inicio.jpg" width="32px" height="32px" alt="">
             <a class="navbar-brand navbar-dark" href="#">Inmobiliaria SION</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="quienessomos.html">Quienes Somos</a></li>
-                <li class="nav-item"><a class="nav-link" href="inmuebles.html">Inmuebles</a></li>
-                <li class="nav-item"><a class="nav-link" href="contactenos.html">Contáctenos</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="clientes.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Clientes
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="clientesgrandes.html">Grandes Empresas</a>
-                    <a class="dropdown-item" href="pymes.html">Pymes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="ayuda.html">Ayuda</a>
-                </li>
+                    <li class="nav-item active"><a class="nav-link" href="index.html">Inicio <span
+                                class="sr-only">(current)</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="quienessomos.html">Quienes Somos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="inmuebles.html">Inmuebles</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactenos.html">Contáctenos</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="clientes.html" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Clientes
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="clientesgrandes.html">Grandes Empresas</a>
+                            <a class="dropdown-item" href="pymes.html">Pymes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ayuda.html">Ayuda</a>
+                    </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Encuentra" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                    <input class="form-control mr-sm-2" type="search" placeholder="Encuentra" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
                 </form>
             </div>
         </nav>
     </header>
     <main>
-    <section style="text-align: center;">
-        <form action="" style= "color: #ccc999; padding:20px;">
-            <label for="nombre">Nombre:</label>
-            <input type="text" name="nombre" id="nombre">
-            <br>
-            <label for="apellidos">Apellidos:</label>
-            <input type="text" name="apellidos" id="apellidos">
-            <br>
-            <label for="correo">Correo:</label>
-            <input type="email" name="correo" id="correo">
-            <br>
-            <label for="cuentanos">Cuentanos:</label>
-            <textarea name="cuentanos" id="cuentanos" cols="30" rows="10"></textarea>
-            <br>
-            <input type="button" value="Borrar">
-            <input type="submit" value="Enviar">
-        
-        </form>
-    </section>
+        <section style="text-align: center;">
+        <h1>Queremos conocerte regalanos tus datos y te contactaremos!!</h1>
+            <form action="" style="color: #ccc999; padding:20px;" width="50%">
+                <div class="form-group row">
+                    <label for="nombre" class="offset-sm-4 col-sm-2 col-form-label">Nombre:</label>
+                    <div class="col-sm-2"><input type="text" name="nombre" id="nombre" class="form-control"></div>
+                </div>
+                <div class="form-group row">
+                    <label for="apellidos" class="offset-sm-4 col-sm-2 col-form-label">Apellidos:</label>
+                    <div class="col-sm-2"><input type="text" name="apellidos" id="apellidos" class="form-control"></div>
+                </div>
+                <div class="form-group row">
+                    <label for="correo" class="offset-sm-4 col-sm-2 col-form-label">Correo:</label>
+                    <div class="col-sm-2"><input type="email" name="correo" id="correo" class="form-control"></div>
+                </div>
+                <div class="form-group row">
+                    <label for="correo" class="offset-sm-4 col-sm-2 col-form-label">Cuentanos:</label>
+                    <div class="col-sm-2"><textarea name="cuentanos" id="cuentanos" cols="30" rows="10" class="form-control"></textarea></div>
+                </div>
+                <div class="form-group row">
+                    <div class="offset-sm-4 col-sm-2 text-center"><button class="btn btn-sm btn-danger">Borrar</button></div>
+                    <div class="col-sm-2 text-center"><button class="btn btn-sm btn-success">Enviar</button></div>
+                </div>
+            </form>
+        </section>
     </main>
     <footer class="bg-light text-center text-lg-start">
-        <div class="container-fluid p-2"  style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="container-fluid p-2" style="background-color: rgba(0, 0, 0, 0.2);">
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                     <p>Todos los derechos reservados</p>
@@ -82,7 +94,7 @@
             </div>
         </div>
     </footer>
-<script src="js/jquery-3.4.1.js"></script>
-<script src="js/bootstrap.js"></script>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/bootstrap.js"></script>
 </body>
 </html>
