--- a/pymes.html
+++ b/pymes.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="imag/favicon.ico">
     <title>Empresas Pymes</title>
 </head>
 <body>
@@ -45,26 +46,26 @@
             </div>
         </nav>
     </header>
-    <main>
+    <div>
         <h1>Pymes</h1>
-        <section class="listarPymesG">
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=1" alt=""> <h5>Pyme 1</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=2" alt=""> <h5>Pyme 2</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=3" alt=""> <h5>Pyme 3</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=4" alt=""> <h5>Pyme 4</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=5" alt=""> <h5>Pyme 5</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=6" alt=""> <h5>Pyme 6</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=7" alt=""> <h5>Pyme 7</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=8" alt=""> <h5>Pyme 8</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=9" alt=""> <h5>Pyme 9</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=10" alt=""> <h5>Pyme 10</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=11" alt=""> <h5>Pyme 11</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=12" alt=""> <h5>Pyme 12</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=13" alt=""> <h5>Pyme 13</h5></div>
-            <div class="pymes"><img src="https://picsum.photos/170/170?random=14" alt=""> <h5>Pyme 14</h5></div>
+        <section class="row">
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=1" alt=""> <h5>Pyme 1</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=2" alt=""> <h5>Pyme 2</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=3" alt=""> <h5>Pyme 3</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=4" alt=""> <h5>Pyme 4</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=5" alt=""> <h5>Pyme 5</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=6" alt=""> <h5>Pyme 6</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=7" alt=""> <h5>Pyme 7</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=8" alt=""> <h5>Pyme 8</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=9" alt=""> <h5>Pyme 9</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=10" alt=""> <h5>Pyme 10</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=11" alt=""> <h5>Pyme 11</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=12" alt=""> <h5>Pyme 12</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=13" alt=""> <h5>Pyme 13</h5></div>
+            <div class="col-sm-4"><img src="https://picsum.photos/170/170?random=14" alt=""> <h5>Pyme 14</h5></div>
             
         </section>
-    </main>
+    </div>
     <footer class="bg-light text-center text-lg-start">
         <div class="container-fluid p-2"  style="background-color: rgba(0, 0, 0, 0.2);">
             <div class="row">
