--- a/quienessomos.html
+++ b/quienessomos.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Encuentra Todo lo relacionado con finca raiz, arriendo, vendo, permuto, comparto, chalets, casaquintas">
-    <meta name="keywords"  content="FINCA RAIZ, ARRIENDO, COMPRO, VENDO, ALQUILO, PERMUTO, CEDO, ARRIENDO COMPARTIDO, FANTASTICA UBICACION">
+    <meta name="description"
+        content="Encuentra Todo lo relacionado con finca raiz, arriendo, vendo, permuto, comparto, chalets, casaquintas">
+    <meta name="keywords"
+        content="FINCA RAIZ, ARRIENDO, COMPRO, VENDO, ALQUILO, PERMUTO, CEDO, ARRIENDO COMPARTIDO, FANTASTICA UBICACION">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="imag/favicon.ico">
     <title>Quienes Somos</title>
 </head>
 <body>
@@ -17,90 +20,117 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <img src="imag/ico_inicio.jpg" width="32px" height="32px" alt="">
             <a class="navbar-brand navbar-dark" href="#">Inmobiliaria SION</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="quienessomos.html">Quienes Somos</a></li>
-                <li class="nav-item"><a class="nav-link" href="inmuebles.html">Inmuebles</a></li>
-                <li class="nav-item"><a class="nav-link" href="contactenos.html">Contáctenos</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="clientes.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Clientes
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="clientesgrandes.html">Grandes Empresas</a>
-                    <a class="dropdown-item" href="pymes.html">Pymes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="ayuda.html">Ayuda</a>
-                </li>
+                    <li class="nav-item active"><a class="nav-link" href="index.html">Inicio <span
+                                class="sr-only">(current)</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="quienessomos.html">Quienes Somos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="inmuebles.html">Inmuebles</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactenos.html">Contáctenos</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="clientes.html" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Clientes
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="clientesgrandes.html">Grandes Empresas</a>
+                            <a class="dropdown-item" href="pymes.html">Pymes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ayuda.html">Ayuda</a>
+                    </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Encuentra" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                    <input class="form-control mr-sm-2" type="search" placeholder="Encuentra" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
                 </form>
             </div>
         </nav>
     </header>
     <main>
-    <div style="text-align: center;">
-    <section>
-        <h3>Historia de la Empresa</h3>
-        <article style="display:flex;" >        
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta eligendi reiciendis reprehenderit maxime explicabo quaerat ipsa, quisquam provident error minima vero, ab perferendis iure quas maiores, quae recusandae aut nobis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque itaque ipsam eaque reprehenderit vero id, nemo laudantium nam omnis placeat repudiandae blanditiis repellat, veritatis minima quasi incidunt culpa at. Tempora!
-        </p>
-        <img src="imag/historia.jfif" alt="Historia de la Empresa" class="fotosEmpresa"></article>
-    </section>
-    <section>
-        <h3>Misión de la Empresa</h3>
-        <article style="display:flex;" >
-        <img src="imag/mision.jfif" alt="Mision dela Empresa" class="fotosEmpresa">        
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt fugit exercitationem quos ducimus sequi fugiat. Labore veritatis odit minus nihil veniam at exercitationem ipsum aliquam vero, voluptatibus ut nulla sint.
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, aspernatur doloribus officiis, dolores ullam perferendis explicabo, soluta maiores quae libero minima totam hic alias eveniet aperiam error distinctio atque officia.
-        </p></article>
-    </section>
-    </div>
-    <table>
-        <thead>
-            <tr>
-                <th colspan="4">Nuestra Empresa le han otorgado:</th>
-            </tr>
-            <tr>
-                <th>Certificados Obtenidos</th>
-                <th>Institución</th>
-                <th>Año</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Iso 9001 Calidad </td>
-                <td>Quality institute of Oxford</td>
-                <td>2019</td>
-                <td>Calidad en todos nuestros procesos internos</td>
-            </tr>
-            <tr>
-                <td>Ico 10001</td>
-                <td>Primary Quality Institute of London</td>
-                <td>2017</td>
-                <td>Atención al usuario destacado por su inmediatez</td>
-            </tr>
-            <tr>
-                <td>Premio a la Excelencia</td>
-                <td>Univeridad Santo Tomaas</td>
-                <td>2015</td>
-                <td></td>
-            </tr>
-        </tbody> 
-    </table>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <h3>Historia de la Empresa</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-7">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta eligendi reiciendis
+                    reprehenderit maxime explicabo quaerat ipsa, quisquam provident error minima vero, ab
+                    perferendis iure quas maiores, quae recusandae aut nobis! Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Neque itaque ipsam eaque reprehenderit vero id, nemo laudantium nam omnis
+                    placeat repudiandae blanditiis repellat, veritatis minima quasi incidunt culpa at. Tempora!
+                </p>
+            </div>
+            <div class="col-sm-5">
+                <img src="imag/historia.jfif" alt="Historia de la Empresa" class="fotosEmpresa">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <h3>Misión de la Empresa</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-5">
+                <img src="imag/mision.jfif" alt="Mision dela Empresa" class="fotosEmpresa">
+            </div>
+            <div class="col-sm-7">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt fugit exercitationem quos
+                    ducimus sequi fugiat. Labore veritatis odit minus nihil veniam at exercitationem ipsum aliquam
+                    vero, voluptatibus ut nulla sint.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere, aspernatur doloribus officiis,
+                    dolores ullam perferendis explicabo, soluta maiores quae libero minima totam hic alias eveniet
+                    aperiam error distinctio atque officia.
+                </p>
+            </div>
+        </div>            
+        <div class="row">
+            <div class="offset-sm-3 col-sm-6">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th colspan="4">Nuestra Empresa le han otorgado:</th>
+                        </tr>
+                        <tr>
+                            <th>Certificados Obtenidos</th>
+                            <th>Institución</th>
+                            <th>Año</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Iso 9001 Calidad </td>
+                            <td>Quality institute of Oxford</td>
+                            <td>2019</td>
+                            <td>Calidad en todos nuestros procesos internos</td>
+                        </tr>
+                        <tr>
+                            <td>Ico 10001</td>
+                            <td>Primary Quality Institute of London</td>
+                            <td>2017</td>
+                            <td>Atención al usuario destacado por su inmediatez</td>
+                        </tr>
+                        <tr>
+                            <td>Premio a la Excelencia</td>
+                            <td>Univeridad Santo Tomaas</td>
+                            <td>2015</td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+                        </div>
+            </div>
     </main>
     <footer class="bg-light text-center text-lg-start">
-        <div class="container-fluid p-2"  style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="container-fluid p-2" style="background-color: rgba(0, 0, 0, 0.2);">
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                     <p>Todos los derechos reservados</p>
@@ -115,7 +145,8 @@
             </div>
         </div>
     </footer>
-<script src="js/jquery-3.4.1.js"></script>
-<script src="js/bootstrap.js"></script>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/bootstrap.js"></script>
 </body>
+
 </html>
